feat(): thay get[0] = getFirst()